# HiveEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  mac_exports.sh
cmake/: FindOptiX.cmake  HiveEngineConfig.cmake.in
data/kinetic_missile/: cntr_kinetic_missile_logo.afdesign  kinetic_missile.blend  kinetic_missile.blend1  kinetic_missile.dae  kinetic_missile.fbx
include/HiveEngine/: AssetManager.h  Buffer.hpp  Common.h  Context.h  DynamicSphere.h  Entity.h  HiveEngine.h  LODSquare.h  Mesh.h  PhysicalEntity.h  RadialGenerator.h  Texture.h  Utilities.h  noise.h
include/HiveEngine/Renderer/: AABBDrawing.h  Camera.h  Context.h  Directive.h  Drawing.h  EntityDrawing.h  FontManager.h  GPUBuffer.hpp  GlyphDrawing.h  ImageDrawing.h  LineDrawing.h  MeshDrawing.h  OptixDrawing.h  StandardDirective.h  TestDirective.h  TextDrawing.h  Vulkan.hpp  vk_mem_alloc.h
include/HiveEngine/Renderer/glad/: glad.h
include/HiveEngine/Vehicle/: Thruster.h
include/HiveEngine/stb/: stb_image.h
proof_of_concept/: hierarchy_center_of_mass.py  moment_of_inertia_shift.py
shaders/: aabb_shader.vert  entity_shader.vert  glyph_shader.frag  glyph_shader.vert  image_shader.frag  image_shader.vert  line_shader.frag  line_shader.vert  mesh_shader.vert  optix_shader.frag  optix_shader.vert
shaders/optix/: chit.cu  color_raygen.cu  exception.cu  miss.cu  payloads.h  rt_function.h  triangle_attributes.cu
src/: AssetManager.cpp  Common.cpp  Context.cpp  DynamicSphere.cpp  Entity.cpp  HiveEngine.cpp  HiveEngine.pc.in  LODSquare.cpp  Mesh.cpp  PhysicalEntity.cpp  RadialGenerator.cpp  Texture.cpp  Utilities.cpp  noise.cpp
src/Renderer/: AABBDrawing.cpp  Camera.cpp  Context.cpp  Directive.cpp  Drawing.cpp  EntityDrawing.cpp  FontManager.cpp  GlyphDrawing.cpp  ImageDrawing.cpp  LineDrawing.cpp  MeshDrawing.cpp  OptixDrawing.cpp  StandardDirective.cpp  TestDirective.cpp  TextDrawing.cpp  glad.c
test/: CMakeLists.txt  he_inc_test.cpp  kinetic_missile_test.cpp  procedural_noise_test.cpp  system_test.cpp
